cmake: amend 2b827e43, fix the typo for GLES3_LIBRARIES

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -364,7 +364,7 @@ if(UNIX AND NOT APPLE AND NOT ANDROID)
 		if(NOT SDL2_FOUND)
 			target_link_libraries(${PROJECT_NAME} PRIVATE EGL)
 		endif()
-		find_library(${GLES3_LIBRARIES} NAMES GLESv3 GLESv2 NO_CACHE REQUIRED)
+		find_library(GLES3_LIBRARIES NAMES GLESv3 GLESv2 NO_CACHE REQUIRED)
 		target_link_libraries(${PROJECT_NAME} PRIVATE ${GLES3_LIBRARIES})
 	else()
 	    set(OpenGL_GL_PREFERENCE LEGACY)
